force-app/main/default/objects/Sale__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Sale Date</label>
    <type>DateTime</type>
</CustomField>