force-app/main/default/objects/Sale__c/fields/Total_Ice_Cream__c.field-meta.xml
<CustomField>
    <fullName>Total_Ice_Cream__c</fullName>
    <label>Total (Ice Cream)</label>
    <summarizedField>Ice_Cream_Sale__c.Quantity__c</summarizedField>
    <summaryForeignKey>Ice_Cream_Sale__c.Sale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>