force-app/main/default/objects/Sale__c/fields/Total_Macarons__c.field-meta.xml
<CustomField>
    <fullName>Total_Macarons__c</fullName>
    <label>Total (Macarons)</label>
    <summarizedField>Macaron_Sale__c.Quantity__c</summarizedField>
    <summaryForeignKey>Macaron_Sale__c.Sale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>